# goit-pycore-vars-assistant-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
assistant_bot/: __init__.py  address_book.py  bot.py  completer.py  constants.py  extract_keywords.py  logo.py  messages.py  notes_book.py  parse_input.py  print_table.py  record_contact.py  record_note.py  rich-table.py  store.py  text_editor.py
assistant_bot/commands/: __init__.py  cmd_add_contact.py  cmd_book_info.py  cmd_books_info.py  cmd_close.py  cmd_delete_contact.py  cmd_edit_contact.py  cmd_exit.py  cmd_hello.py  cmd_ntlk_downloader_run.py  user_command.py
assistant_bot/commands/cmd_address/: cmd_add_address.py  cmd_delete_address.py  cmd_edit_address.py
assistant_bot/commands/cmd_birthday/: cmd_add_birthday.py  cmd_delete_birthday.py  cmd_show_birthday.py  cmd_show_upcoming_birthday.py
assistant_bot/commands/cmd_contact/: cmd_add_contact.py  cmd_all_contacts.py  cmd_delete_contact.py  cmd_edit_contact.py  cmd_find_by_address.py  cmd_find_by_email.py  cmd_find_by_phone.py  cmd_show_contact.py
assistant_bot/commands/cmd_email/: command_add_email.py  command_delete_email.py  command_edit_email.py
assistant_bot/commands/cmd_note/: cmd_add_note.py  cmd_all_notes.py  cmd_delete_note.py  cmd_edit_note.py  cmd_note_extract_keywords.py  cmd_show_note.py
assistant_bot/fields/: __init__.py  field.py  field_address.py  field_birthday.py  field_email.py  field_keyword.py  field_name.py  field_phone.py  field_text.py  field_title.py
(+4 files in other folders)
